# matrix

./: .gitignore  changelog.md  license  matrix.cabal  readme.md  stack.yaml
Data/: Matrix.hs
Data/Matrix/: Unboxed.hs
bench/: mult.hs  rref.hs
test/: Examples.hs  Main.hs  RRef.hs
