Name: matrix
Version: 0.1.2
Author: Daniel Díaz
Category: Math
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Stability: In development
Bug-reports: https://github.com/Daniel-Diaz/matrix/issues
Synopsis: A native implementation of matrix operations.
Description:
 Matrix type and basic operations. Just a preliminary version without too many features.
Cabal-version: >= 1.8
Extra-source-files:
  -- Benchmarks
  bench/mult.hs

Source-repository head
  type: git
  location: git://github.com/Daniel-Diaz/matrix.git

Library
  Build-depends: base ==4.*
               , vector
               , deepseq
  Exposed-modules: Data.Matrix
  GHC-Options: -Wall

Benchmark matrix-mult
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: mult.hs
  build-depends: base ==4.*
               , matrix
               , criterion
  ghc-options: -O2