Name: matrix
Version: 0.2
Author: Daniel Díaz
Category: Math
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Stability: In development
Bug-reports: https://github.com/Daniel-Diaz/matrix/issues
Synopsis: A native implementation of matrix operations.
Description:
  Matrix library. Basic operations and some algorithms.
  .
  To get the library update your cabal package list (if needed) with @cabal update@ and
  then use @cabal install matrix@, assuming that you already have Cabal installed.
  .
  If you want to use GSL, BLAS and LAPACK, @hmatrix@ (<http://hackage.haskell.org/package/hmatrix>)
  is the way to go.
Cabal-version: >= 1.8
Extra-source-files:
  -- Benchmarks
  bench/mult.hs

Source-repository head
  type: git
  location: git://github.com/Daniel-Diaz/matrix.git

Library
  Build-depends: base ==4.*
               , vector
               , deepseq
  Exposed-modules: Data.Matrix
  GHC-Options: -Wall

Benchmark matrix-mult
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: mult.hs
  build-depends: base ==4.*
               , matrix
               , criterion
  ghc-options: -O2